--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,17 @@ jobs:
         uses: codecov/codecov-action@v3
         if: ${{ matrix.python-version == '3.11' }}
 
+      - name: Testspace client setup
+        uses: testspace-com/setup-testspace@v1
+        with:
+          domain: ${{ github.repository_owner }}
+          token: ${{ secrets.TESTSPACE_TOKEN }}
+
+      - name: Push result to Testspace server
+        run: |
+          testspace junit-*.xml coverage.xml
+        if: always()
+
   check-docs:
     runs-on: ubuntu-latest
     steps:
