--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -12,6 +12,17 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
+{% if cookiecutter.database == 'y' -%}
+sqlmodel = {extras = ["all"], version = "^0.0.16"}
+omegaconf = "^2.3.0"
+sqlalchemy-utils = "^0.41.2"
+fastapi = {extras = ["all"], version = "^0.110.0"}
+typer = "^0.12.3"
+types-requests = "^2.31.0.20240406"
+{% endif -%}
+{% if cookiecutter.dockerfile == 'y' -%}
+docker = "^7.1.0"
+{% endif -%}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -32,7 +43,11 @@ mkdocs-material = "^9.2.7"
 mkdocs-mermaid2-plugin = "^1.1.1"
 pymdown-extensions = "^10.7.1"
 mkdocstrings = {extras = ["python"], version = "^0.23.0"}
-{%- endif %}
+{% endif -%}
+
+[tool.poetry.group.test.dependencies]
+pytest-lazy-fixture = "^0.6.3"
+nbmake = "^1.5.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -92,6 +107,10 @@ ignore = [
     "E501",
     # DoNotAssignLambda
     "E731",
+    # F405 `XYZ` may be undefined, or defined from star imports
+    "F405",
+    # F403 `from xyz import *` used; unable to detect undefined names
+    "F403",
 ]
 
 [tool.ruff.format]
@@ -104,7 +123,24 @@ skip_empty = true
 [tool.coverage.run]
 branch = true
 source = ["{{cookiecutter.project_slug}}"]
-{% endif%}
+{% endif -%}
+
+{% if cookiecutter.deptry == "y"-%}
+[tool.deptry]
+ignore = ["DEP003", "DEP001"]
+[tool.deptry.per_rule_ignores]
+DEP002 = ['types-requests']
+{% endif -%}
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
+{% if cookiecutter.database == "y"-%}
+# Database id otherwise generates this error
+"{{cookiecutter.project_slug}}/*" = ["A003"]
+# HTTPBasic must be called as part of dependencies
+# "{{cookiecutter.project_slug}}/dependencies/security.py" = ["B008"]
+
+[tool.poetry.scripts]
+start-server = "{{cookiecutter.project_slug}}.main:start_server_entry_point"
+{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:cli_app"
+{% endif -%}
