--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -11,5 +11,5 @@ passenv = PYTHON_VERSION
 allowlist_externals = poetry
 commands =
     poetry install -v
-    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
+    pytest -s --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml --junitxml=junit-{envname}.xml
     mypy
