--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,10 @@ jobs:
 
   tox:
     runs-on: ubuntu-latest
+    needs: quality
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.12"]
       fail-fast: false
     steps:
       - name: Check out
@@ -63,9 +64,21 @@ jobs:
       - name: Test with tox
         run: tox
 
-      - name: Upload coverage reports to Codecov with GitHub Action on Python 3.11
+      - name: Upload coverage reports to Codecov with GitHub Action on Python 3.12
         uses: codecov/codecov-action@v4
-        if: ${{ matrix.python-version == '3.11' }}
+        if: ${{ matrix.python-version == '3.12' }}
+
+      - name: Testspace client setup
+        uses: testspace-com/setup-testspace@v1
+        with:
+          domain: ${{ github.repository_owner }}
+          token: ${{ secrets.TESTSPACE_TOKEN }}
+        if: always()
+
+      - name: Push result to Testspace server
+        run: |
+          testspace junit-*.xml coverage.xml
+        if: always()
 
   check-docs:
     runs-on: ubuntu-latest
