--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,17 +22,19 @@ cookiecutter = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
-pre-commit = "^2.20.0"
+pre-commit = "^3.4.0"
 pytest-cookies = "^0.6.1"
-tox = "^3.25.1"
+tox = "^4.11.1"
 deptry = "^0.12.0"
-mypy = "^0.991"
+mypy = "^1.5.1"
 pytest-cov = "^4.0.0"
 pytest-check = "^2.3.1"
+pytest-mock = "^3.14.0"
+ruff = "^0.3.4"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
-mkdocs-material = "^8.5.10"
+mkdocs-material = "^9.2.7"
 mkdocs-mermaid2-plugin = "^1.1.1"
 pymdown-extensions = "^10.7.1"
 
