--- a/{{cookiecutter.project_name}}/.github/workflows/main.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/main.yml
@@ -59,8 +59,20 @@ jobs:
 {% if cookiecutter.codecov == "y" %}
       - name: Upload coverage reports to Codecov with GitHub Action on Python 3.11
         uses: codecov/codecov-action@v4
-        if: {% raw %}${{ matrix.python-version == '3.11' }}{% endraw %}
+        if: {% raw %}${{ matrix.python-version == '3.12' }}{% endraw %}
 {%- endif %}
+
+      - name: Testspace client setup
+        uses: testspace-com/setup-testspace@v1
+        with:
+          domain: {% raw %}${{ github.repository_owner }}{% endraw %}
+          token: {% raw %}${{ secrets.TESTSPACE_TOKEN }}{% endraw %}
+        if: always()
+
+      - name: Push result to Testspace server
+        run: |
+          testspace junit-*.xml coverage.xml
+        if: always()
 
 {%- if cookiecutter.mkdocs == "y" %}
 
