--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -35,6 +35,9 @@ deptry = "^0.12.0"
 mypy = "^1.5.1"
 pre-commit = "^3.4.0"
 tox = "^4.11.1"
+pytest-check = "^2.3.1"
+pytest-mock = "^3.14.0"
+ruff = "^0.3.4"
 
 {% if cookiecutter.mkdocs == 'y' -%}
 [tool.poetry.group.docs.dependencies]
