--- a/{{cookiecutter.project_name}}/mkdocs.yml
+++ b/{{cookiecutter.project_name}}/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: {{cookiecutter.project_name}}
-repo_url: https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}
-site_url: https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}
+repo_url: https://github.com/partsnap/{{cookiecutter.project_name}}
+site_url: https://partsnap.github.io/{{cookiecutter.project_name}}
 site_description: {{cookiecutter.project_description}}
 site_author: {{cookiecutter.author}}
 edit_uri: edit/main/docs/
-repo_name: {{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}
-copyright: Maintained by <a href="https://{{cookiecutter.author_github_handle}}.com">{{cookiecutter.author}}</a>.
+repo_name: partsnap/{{cookiecutter.project_name}}
+copyright: Maintained by <a href="https://partsnap.com">{{cookiecutter.author}}</a>.
 
 nav:
   - Home: index.md
@@ -45,7 +45,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}
+      link: https://github.com/partsnap/{{cookiecutter.project_name}}
     - icon: fontawesome/brands/python
       link: https://pypi.org/project/{{cookiecutter.project_name}}
 
