--- a/{{cookiecutter.project_name}}/.github/workflows/on-release-main.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/on-release-main.yml
@@ -6,7 +6,7 @@ on:
     branches: [main]
 
 jobs:
-  {% if cookiecutter.publish_to != "none" %}
+  {%- if cookiecutter.publish_to != "none" %}
   publish:
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,7 @@ jobs:
           RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
           {%- endraw -%}
           {%- endif %}
-  {% endif %}
+  {%- endif %}
   deploy-docs:
     {%- if cookiecutter.publish_to != "none" %}
     needs: publish
