updated more docs, added docker docs

--- a/{{cookiecutter.project_name}}/mkdocs.yml
+++ b/{{cookiecutter.project_name}}/mkdocs.yml
@@ -10,6 +10,7 @@ copyright: Maintained by <a href="https://partsnap.com">{{cookiecutter.author}}<
 nav:
   - Home: index.md
   - Modules: modules.md
+  - Docker: docker.md
 plugins:
   - search
   - mermaid2:
