refactored docker usage for project creation, updated dependencies

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -1,4 +1,4 @@
-tag:=latest
+tag:=$(shell poetry version -s)
 PS_DOCKERHUB_USERNAME = pslbrack
 DOCKER_PROJECT_IMAGE_NAME={{ cookiecutter.project_name }}
 DOCKER_PROJECT_CONTAINER_NAME={{ cookiecutter.project_name }}
