--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cookiecutter-poetry"
-version = "0.1.0"
+version = "1.1.1"
 description = "A python cookiecutter application to create a new python project that uses poetry to manage its dependencies."
 authors = ["Florian Maas <fpgmaas@gmail.com>"]
 repository = "https://github.com/fpgmaas/cookiecutter-poetry"
@@ -17,11 +17,11 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
+python = ">=3.12,<3.13"
 cookiecutter = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
+pytest = "<8.0.0"
 pre-commit = "^3.4.0"
 pytest-cookies = "^0.6.1"
 tox = "^4.11.1"
