--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -11,19 +11,19 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
+python = ">=3.12,<3.13"
 {% if cookiecutter.database == 'y' -%}
-sqlmodel = {extras = ["all"], version = "^0.0.16"}
+sqlmodel = {extras = ["all"], version = "<1.0.0"}
 omegaconf = "^2.3.0"
 sqlalchemy-utils = "^0.41.2"
-fastapi = {extras = ["all"], version = "^0.110.0"}
+fastapi = {extras = ["all"], version = "<1.0.0"}
 typer = "^0.12.3"
 types-requests = "^2.31.0.20240406"
-{% endif -%}
 docker = "^7.1.0"
+{% endif -%}
+pytest = "<8.0.0" # Version 8 is not compatible with pytest-lazy-fixture https://github.com/pytest-dev/pytest/issues/11890
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 deptry = "^0.12.0"
 mypy = "^1.5.1"
@@ -42,10 +42,6 @@ mkdocstrings = {extras = ["python", "shell"], version = "^0.25.2"}
 mkdocs-drawio-file = "^1.5.2"
 mkdocs-github-admonitions-plugin = "^0.0.2"
 mkdocs-exclude = "^1.0.2"
-
-[tool.poetry.group.test.dependencies]
-pytest-lazy-fixture = "^0.6.3"
-nbmake = "^1.5.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
