--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,4 +28,4 @@ repos:
     hooks:
       - id: mypy
         language: system
-        exclude: ^{{cookiecutter.project_name}}
+        exclude: tests|^{{cookiecutter.project_name}}
