--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,10 @@ repos:
     hooks:
       - id: prettier
         exclude: ^{{cookiecutter.project_name}}
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.11.2"
+    hooks:
+      - id: mypy
+        language: system
+        exclude: tests|^{{cookiecutter.project_name}}
