--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -57,6 +57,10 @@ warn_return_any = "True"
 warn_unused_ignores = "True"
 show_error_codes = "True"
 
+[[tool.mypy.overrides]]
+module = "boto3.*,docker.*,botocore.*,retrying.*"
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
