--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ python = ">=3.12,<3.13"
 cookiecutter = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "<8.0.0"
+pytest = "^8.3.3"
 pre-commit = "^3.4.0"
 pytest-cookies = "^0.6.1"
 tox = "^4.11.1"
