--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -21,7 +21,7 @@ typer = "^0.12.3"
 types-requests = "^2.31.0.20240406"
 docker = "^7.1.0"
 {% endif -%}
-pytest = "<8.0.0" # Version 8 is not compatible with pytest-lazy-fixture https://github.com/pytest-dev/pytest/issues/11890
+pytest = "^8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.0.0"
@@ -38,7 +38,7 @@ mkdocs = "^1.4.2"
 mkdocs-material = "^9.2.7"
 mkdocs-mermaid2-plugin = "^1.1.1"
 pymdown-extensions = "^10.7.1"
-mkdocstrings = {extras = ["python", "shell"], version = "^0.25.2"}
+mkdocstrings = {extras = ["python", "shell"], version = "^0.26.2"}
 mkdocs-drawio-file = "^1.5.2"
 mkdocs-github-admonitions-plugin = "^0.0.2"
 mkdocs-exclude = "^1.0.2"
